Updated settings style

--- a/REWORK/settings.html
+++ b/REWORK/settings.html
@@ -28,7 +28,7 @@
 
         <div id="window-title">
           <img src="src/img/IAC-Icon.ico" alt="The icon of IAC">
-          <span>Instagram Automated Commenting</span>
+          <span id="win-title-text">Instagram Automated Commenting</span>
         </div>
         
         <div id="window-controls">      
