Updated profile click

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -60,7 +60,7 @@
             <img id="runIcon" src="src/img/icons/light/run.svg" alt="Image of the run icon">
             <p class="navText">Kommentieren</p>
           </a>
-          <a href="" class="profile">
+          <a class="profile">
             <i class="line"></i>
             <img id="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon">
             <p class="navText">Benutzerprofil</p>
