Added navigation animation

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -154,9 +154,9 @@
           <details id="additional-settings">
             <summary id="details">
 
-              <i class="line"></i>
+              <i class="line-additional"></i>
               <p id="small-detail-title">Erweiterte Einstellungen</p>
-              <i class="line"></i>
+              <i class="line-additional"></i>
 
             </summary>
             <div id="a-d-content">
