Removed settings page

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -86,7 +86,7 @@
             <img id="wifi-img" src="src/img/icons/light/wifi/wifi-good.svg" alt="Image of the wifi icon">
             <p class="navText"><span id="changeText">- -</span> <span class="second-text">mb/s</span></p>
           </a>
-          <a href="settings.html" class="settings">
+          <a class="settings">
             <img id="settingsIcon" src="src/img/icons/light/settings.svg" alt="Image of the settings icon">
             <p class="navText">Einstellungen</p>
           </a>
