Updated nav animation

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -87,6 +87,7 @@
             <p class="navText"><span id="changeText">- -</span> <span class="second-text">mb/s</span></p>
           </a>
           <a class="settings">
+            <i class="line"></i>
             <img id="settingsIcon" src="src/img/icons/light/settings.svg" alt="Image of the settings icon">
             <p class="navText">Einstellungen</p>
           </a>
