Updated nav animation

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -66,7 +66,6 @@
             <p class="navText">Benutzerprofil</p>
           </a>
           <a id="theme-to-dark">
-            <i class="line"></i>
             <img id="themeIcon" src="src/img/icons/light/theme.svg" alt="Image of the moon for changing the color theme">
             <p class="navText">Dunkles <span class="second-text">Design</span></p>
           </a>
@@ -75,7 +74,7 @@
             <img id="themeIcon" src="src/img/icons/dark/theme.svg" alt="Image of the moon for changing the color theme">
             <p class="navText">Helles <span class="second-text">Design</span></p>
           </a>
-          <a href="" class="help-tab">
+          <a class="help-tab">
             <i class="line"></i>
             <img id="helpIcon" src="src/img/icons/light/help.svg" alt="Image of the help icon">
             <p class="navText">Hilfe</p>
