--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -91,20 +91,43 @@
             <p class="navText">Einstellungen</p>
           </a>
         </footer>
-        <!-- <div id="settings-container">
-          <div id="settings-content">
-            <a id="change-language"><img src="src/img/icons/light/translate.svg" alt="Icon of the translate symbol"></a>
-            <a id="notification"><img src="src/img/icons/light/alert.svg" alt="Icon of a bell"></a>
-            <a id="contact"><img src="src/img/icons/light/mail.svg" alt="Icon of the mail symbol"></a>
-            <a id="developer"><img src="src/img/icons/light/code.svg" alt="Icon of the code symbol"></a>
-            <a id="report-bug"><img src="src/img/icons/light/bug.svg" alt="Icon of a bug"></a>
-            <a id="about"><img src="src/img/icons/light/info.svg" alt="Icon of an info symbol"></a>
-            <a id="more-settings"><img src="src/img/icons/light/more.svg" alt="Icon of three dots"></a>
-          </div> -->
-        </div>
       </div>
     </nav>
     <main>
+      <div id="profile-container">
+          <div class="container-blob"></div> 
+          <div id="profile-content">
+            <a id="profile-1">
+              <img src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
+              <p>Profil 1</p> 
+            </a>
+            <a id="profile-2">
+              <img src="src/img/icons/light/profile.svg" alt="Image of the profile icon">  
+              <p>Profil 2 mit langem Namen</p>
+            </a>
+            <a id="profile-3">
+              <img src="src/img/icons/light/profile.svg" alt="Image of the profile icon">  
+              <p>Profil 3</p>
+            </a>
+            <a id="profile-3">
+              <img src="src/img/icons/light/more.svg" alt="Image of three dots">  
+              <p>Mehr anzeigen</p>
+            </a>
+          </div>
+        </div>
+
+      <div id="settings-container">
+        <div class="container-blob"></div> 
+        <div id="settings-content">
+          <a id="change-language"><img src="src/img/icons/light/translate.svg" alt="Icon of the translate symbol"></a>
+          <a id="notification"><img src="src/img/icons/light/alert.svg" alt="Icon of a bell"></a>
+          <a id="contact"><img src="src/img/icons/light/mail.svg" alt="Icon of the mail symbol"></a>
+          <a id="developer"><img src="src/img/icons/light/code.svg" alt="Icon of the code symbol"></a>
+          <a id="report-bug"><img src="src/img/icons/light/bug.svg" alt="Icon of a bug"></a>
+          <a id="about"><img src="src/img/icons/light/info.svg" alt="Icon of an info symbol"></a>
+          <a id="more-settings"><img src="src/img/icons/light/more.svg" alt="Icon of three dots"></a>
+        </div>
+      </div>
       <form>
         <div id="main-content">
           <div id="account-details">
