Updated nav animation

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -74,7 +74,7 @@
             <img id="themeIcon" src="src/img/icons/dark/theme.svg" alt="Image of the moon for changing the color theme">
             <p class="navText">Helles <span class="second-text">Design</span></p>
           </a>
-          <a class="help-tab">
+          <a class="helpNav">
             <i class="line"></i>
             <img id="helpIcon" src="src/img/icons/light/help.svg" alt="Image of the help icon">
             <p class="navText">Hilfe</p>
@@ -118,14 +118,42 @@
 
       <div id="settings-container">
         <div class="container-blob"></div> 
-        <div id="settings-content">
-          <a id="change-language"><img src="src/img/icons/light/translate.svg" alt="Icon of the translate symbol"></a>
-          <a id="notification"><img src="src/img/icons/light/alert.svg" alt="Icon of a bell"></a>
-          <a id="contact"><img src="src/img/icons/light/mail.svg" alt="Icon of the mail symbol"></a>
-          <a id="developer"><img src="src/img/icons/light/code.svg" alt="Icon of the code symbol"></a>
-          <a id="report-bug"><img src="src/img/icons/light/bug.svg" alt="Icon of a bug"></a>
-          <a id="about"><img src="src/img/icons/light/info.svg" alt="Icon of an info symbol"></a>
-          <a id="more-settings"><img src="src/img/icons/light/more.svg" alt="Icon of three dots"></a>
+        <ul id="settings-content">
+          <li>
+            <a id="change-language">
+              <img src="src/img/icons/light/translate.svg" alt="Icon of the translate symbol">
+            </a>
+          </li>
+          <li>
+            <a id="notification">
+              <img src="src/img/icons/light/alert.svg" alt="Icon of a bell">
+            </a>
+          </li>
+          <li>
+            <a id="contact">
+              <img src="src/img/icons/light/mail.svg" alt="Icon of the mail symbol">
+            </a>
+          </li>
+          <li>
+            <a id="developer">
+              <img src="src/img/icons/light/code.svg" alt="Icon of the code symbol">
+            </a>
+          </li>
+          <li>
+            <a id="report-bug">
+              <img src="src/img/icons/light/bug.svg" alt="Icon of a bug">
+            </a>
+          </li>
+          <li>
+            <a id="about">
+              <img src="src/img/icons/light/info.svg" alt="Icon of an info symbol">
+            </a>
+          </li>
+          <li>
+            <a id="more-settings">
+              <img src="src/img/icons/light/more.svg" alt="Icon of three dots">
+            </a>
+          </li>
         </div>
       </div>
       <form>
