Updated nav settings

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -96,23 +96,31 @@
     <main>
       <div id="profile-container">
           <div class="container-blob"></div> 
-          <div id="profile-content">
-            <a id="profile-1">
-              <img src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
-              <p>Profil 1</p> 
-            </a>
-            <a id="profile-2">
-              <img src="src/img/icons/light/profile.svg" alt="Image of the profile icon">  
-              <p>Profil 2 mit langem Namen</p>
-            </a>
-            <a id="profile-3">
-              <img src="src/img/icons/light/profile.svg" alt="Image of the profile icon">  
-              <p>Profil 3</p>
-            </a>
-            <a id="profile-3">
-              <img src="src/img/icons/light/more.svg" alt="Image of three dots">  
-              <p>Mehr anzeigen</p>
-            </a>
+          <ul id="profile-content">
+            <li>
+              <a id="profile-1">
+                <img src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
+                <p>Profil 1</p> 
+              </a>
+            </li>
+            <li>
+              <a id="profile-2">
+                <img src="src/img/icons/light/profile.svg" alt="Image of the profile icon">  
+                <p>Profil 2 mit langem Namen</p>
+              </a>
+            </li>
+            <li>
+              <a id="profile-3">
+                <img src="src/img/icons/light/profile.svg" alt="Image of the profile icon">  
+                <p>Profil 3</p>
+              </a>
+            </li>
+            <li>
+              <a id="profile-3">
+                <img src="src/img/icons/light/more.svg" alt="Image of three dots">  
+                <p>Mehr anzeigen</p>
+              </a>
+            </li>
           </div>
         </div>
 
