Updated setting icons for theme change

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -129,37 +129,37 @@
         <ul id="settings-content">
           <li>
             <a id="change-language">
-              <img src="src/img/icons/light/translate.svg" alt="Icon of the translate symbol">
+              <img id="set-lang" src="src/img/icons/light/translate.svg" alt="Icon of the translate symbol">
             </a>
           </li>
           <li>
             <a id="notification">
-              <img src="src/img/icons/light/alert.svg" alt="Icon of a bell">
+              <img id="set-note" src="src/img/icons/light/alert.svg" alt="Icon of a bell">
             </a>
           </li>
           <li>
             <a id="contact">
-              <img src="src/img/icons/light/mail.svg" alt="Icon of the mail symbol">
+              <img id="set-cont" src="src/img/icons/light/mail.svg" alt="Icon of the mail symbol">
             </a>
           </li>
           <li>
             <a id="developer">
-              <img src="src/img/icons/light/code.svg" alt="Icon of the code symbol">
+              <img id="set-dev" src="src/img/icons/light/code.svg" alt="Icon of the code symbol">
             </a>
           </li>
           <li>
             <a id="report-bug">
-              <img src="src/img/icons/light/bug.svg" alt="Icon of a bug">
+              <img id="set-bug" src="src/img/icons/light/bug.svg" alt="Icon of a bug">
             </a>
           </li>
           <li>
             <a id="about">
-              <img src="src/img/icons/light/info.svg" alt="Icon of an info symbol">
+              <img id="set-abo" src="src/img/icons/light/info.svg" alt="Icon of an info symbol">
             </a>
           </li>
           <li>
             <a id="more-settings">
-              <img src="src/img/icons/light/more.svg" alt="Icon of three dots">
+              <img id="set-more" src="src/img/icons/light/more.svg" alt="Icon of three dots">
             </a>
           </li>
         </div>
