Added text for nav settings

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -130,36 +130,43 @@
           <li>
             <a id="change-language">
               <img id="set-lang" src="src/img/icons/light/translate.svg" alt="Icon of the translate symbol">
+              <p id="set-lang-text">Sprache ändern</p>
             </a>
           </li>
           <li>
             <a id="notification">
               <img id="set-note" src="src/img/icons/light/alert.svg" alt="Icon of a bell">
+              <p id="set-note-text">Benachrichtungen</p>
             </a>
           </li>
           <li>
             <a id="contact">
               <img id="set-cont" src="src/img/icons/light/mail.svg" alt="Icon of the mail symbol">
+              <p id="set-cont-text">Kontakt aufnehmen</p>
             </a>
           </li>
           <li>
             <a id="developer">
               <img id="set-dev" src="src/img/icons/light/code.svg" alt="Icon of the code symbol">
+              <p id="set-dev-text">Entwickler Einstellungen</p>
             </a>
           </li>
           <li>
             <a id="report-bug">
               <img id="set-bug" src="src/img/icons/light/bug.svg" alt="Icon of a bug">
+              <p id="set-bug-text">Fehler melden</p>
             </a>
           </li>
           <li>
             <a id="about">
               <img id="set-abo" src="src/img/icons/light/info.svg" alt="Icon of an info symbol">
+              <p id="set-abo-text">Info</p>
             </a>
           </li>
           <li>
             <a id="more-settings">
               <img id="set-more" src="src/img/icons/light/more.svg" alt="Icon of three dots">
+              <p id="set-more-text">Mehr Einstellungen</p>
             </a>
           </li>
         </div>
