Updated settings text

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -142,13 +142,13 @@
           <li>
             <a id="contact">
               <img id="set-cont" src="src/img/icons/light/mail.svg" alt="Icon of the mail symbol">
-              <p id="set-cont-text">Kontakt aufnehmen</p>
+              <p id="set-cont-text">Kontakt</p>
             </a>
           </li>
           <li>
             <a id="developer">
               <img id="set-dev" src="src/img/icons/light/code.svg" alt="Icon of the code symbol">
-              <p id="set-dev-text">Entwickler Einstellungen</p>
+              <p id="set-dev-text">Entwickleroptionen</p>
             </a>
           </li>
           <li>
