Updated nav settings and help

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -143,13 +143,13 @@
           <li>
             <a id="info">
               <img id="help-info" src="src/img/icons/light/info.svg" alt="Icon of an info symbol">
-              <p id="help-info-text">Info</p>
+              <p id="help-info-text">Informationen</p>
             </a>
           </li>
           <li>
             <a id="help-page">
               <img class="helpIcon" src="src/img/icons/light/help.svg" alt="Image of the help icon"> 
-              <p id="help-text">Hilfe</p> 
+              <p id="help-text">Mehr Hilfe</p> 
             </a>
           </li>
         </ul>
@@ -179,7 +179,19 @@
           <li>
             <a id="developer">
               <img id="set-dev" src="src/img/icons/light/code.svg" alt="Icon of the code symbol">
-              <p id="set-dev-text">Entwickleroptionen</p>
+              <p id="set-dev-text">Entwickler-Optionen</p>
+            </a>
+          </li>
+          <li>
+            <a id="update">
+              <img id="set-up" src="src/img/icons/light/update.svg" alt="Icon of an round arrow">
+              <p id="set-up-text">Nach Update suchen</p>
+            </a>
+          </li>
+          <li>
+            <a id="download">
+              <img id="set-dow" src="src/img/icons/light/download.svg" alt="Icon of the downlaod symbol">
+              <p id="set-dow-text">Aktualisieren</p>
             </a>
           </li>
           <li>
