Added UI download and update

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -88,6 +88,7 @@
           <a class="settings">
             <i class="line"></i>
             <img id="settingsIcon" src="src/img/icons/light/settings.svg" alt="Image of the settings icon">
+            <i id="updateInfo"></i>
             <p class="navText">Einstellungen</p>
           </a>
         </footer>
