Updated icons, animation, and UI

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -160,27 +160,17 @@
         <div class="container-blob"></div> 
         <ul id="settings-content">
           <li>
-            <a id="comment-settings">
-              <img id="set-comm" src="src/img/icons/light/comment-settings.svg" alt="Icon of the comment settings">
-              <p id="set-comm-text">Kommentar-Einstellungen</p>
-            </a>
-          </li>
-          <li>
-            <a id="notification">
-              <img id="set-note" src="src/img/icons/light/alert.svg" alt="Icon of a bell">
-              <p id="set-note-text">Benachrichtungen</p>
-            </a>
-          </li>
-          <li>
             <a id="change-language">
               <img id="set-lang" src="src/img/icons/light/translate.svg" alt="Icon of the translate symbol">
               <p id="set-lang-text">Sprache ändern</p>
             </a>
           </li>
           <li>
-            <a id="developer">
-              <img id="set-dev" src="src/img/icons/light/code.svg" alt="Icon of the code symbol">
-              <p id="set-dev-text">Entwickler-Optionen</p>
+            <a id="notification">
+              <img id="set-note-on" src="src/img/icons/light/alert.svg" alt="Icon of a bell">
+              <img id="set-note-urgent" src="src/img/icons/light/alert-urgent.svg" alt="Icon of a bell">
+              <img id="set-note-off" src="src/img/icons/light/alert-off.svg" alt="Icon of a bell">
+              <p id="set-note-text">Benachrichtungen: <span id="notification-text">Alle</i></p>
             </a>
           </li>
           <li>
@@ -193,6 +183,18 @@
             <a id="download">
               <img id="set-dow" src="src/img/icons/light/download.svg" alt="Icon of the downlaod symbol">
               <p id="set-dow-text">Aktualisieren</p>
+            </a>
+          </li>
+          <li>
+            <a id="comment-settings">
+              <img id="set-comm" src="src/img/icons/light/comment-settings.svg" alt="Icon of the comment settings">
+              <p id="set-comm-text">Kommentar-Einstellungen</p>
+            </a>
+          </li>
+          <li>
+            <a id="developer">
+              <img id="set-dev" src="src/img/icons/light/code.svg" alt="Icon of the code symbol">
+              <p id="set-dev-text">Entwickler-Optionen</p>
             </a>
           </li>
           <li>
