Added stop Icon

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -58,6 +58,7 @@
           <a class="comment" id="active">
             <i class="line"></i>
             <img id="runIcon" src="src/img/icons/light/run.svg" alt="Image of the run icon">
+            <img id="stopIcon" src="src/img/icons/light/stop.svg" alt="Image of the stop icon">
             <p class="navText">Kommentieren</p>
           </a>
           <a class="profile">
