Added "open external" icon

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -151,7 +151,8 @@
           <li>
             <a id="help-page">
               <img class="helpIcon" src="src/img/icons/light/help.svg" alt="Image of the help icon"> 
-              <p id="help-text">Mehr Hilfe</p> 
+              <p id="help-text">Hilfe</p>
+              <img src="src/img/icons/light/open-external.svg" alt="Icon of the link symbol" class="openExternal" id="open-external">
             </a>
           </li>
         </ul>
