Added error state for update

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -182,6 +182,12 @@
             </a>
           </li>
           <li>
+            <a id="update-failed">
+              <img id="set-up-failed" src="src/img/icons/light/update-fail.svg" alt="Icon of an round arrow">
+              <p id="set-up-text-failed">Fehlgeschlagen</p>
+            </a>
+          </li>
+          <li>
             <a id="download">
               <img id="set-dow" src="src/img/icons/light/download.svg" alt="Icon of the downlaod symbol">
               <p id="set-dow-text">Aktualisieren</p>
@@ -321,7 +327,7 @@
     <div id="error-banner-wifi" class="banner">
       <div class="banner-content">
         <div id="error-icon-wifi" class="banner-icon"><img class="error-icon-img" src="src/img/icons/dark/clear.svg" alt="Error icon"></div>
-        <div id="error-title-wifi" class="banner-title">Kein Internet</div>
+        <div id="error-title-wifi" class="banner-title">Langsames Internet</div>
         <div id="error-info-wifi" class="banner-info">Überprüfe deine Internet-Verbindung.</div>
         <button id="error-hide" title="Stelle diese Nachricht ab">Deaktivieren</button>
         <div id="error-close-wifi" class="banner-close"><img class="clearIcon" src="src/img/icons/light/clear.svg" alt="Close icon for error banner"></div>
