Added desktop notifications

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -12,6 +12,7 @@
     <!-- JS -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
     <script src="src/js/lib/jquery.min.js"></script>
+    <script defer src="src/js/notification.js"></script>
     <script defer src="src/js/banner.js"></script>
     <script defer src="src/js/cursor.js"></script>
     <script defer src="src/js/theme.js"></script>
