Added functionality for profile

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -100,40 +100,38 @@
       <div id="profile-container">
         <div class="container-blob"></div> 
         <ul id="profile-content">
-          <li>
-            <a id="profile-1">
+          <li id="profile-1">
+            <a>
               <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
-              <p id="profile-1-name">Profil 1</p> 
+              <p id="profile-1-name">Profil</p> 
             </a>
           </li>
-          <li>
-            <a id="profile-2">
+          <li id="profile-2">
+            <a>
               <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
-              <p id="profile-2-name">Profil 2 mit langen Namen</p> 
+              <p id="profile-2-name">Profil</p> 
             </a>
           </li>
-          <li>
-            <a id="profile-3">
-              <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon">  
-              <p id="profile-3-name">Profil 3</p>
+          <li id="profile-3">
+            <a>
+              <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
+              <p id="profile-3-name">Profil</p> 
             </a>
           </li>
-          <li>
-            <a id="more-profile">
+          <li id="more-profile">
+            <a>
               <img class="moreIcon" src="src/img/icons/light/more.svg" alt="Image of three dots">  
               <p>Mehr anzeigen</p>
             </a>
           </li>
-          <li>
-            <a id="add-profile">
+          <li id="add-profile">
+            <a>
               <img id="addIcon" src="src/img/icons/light/add.svg" alt="Image of a plus symbol">  
               <p>Hinzufügen</p>
             </a>
           </li>
         </ul>
       </div>
-
-      
       <div id="help-container">
         <div class="container-blob"></div> 
         <ul id="help-content">
