Updated download center

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -160,52 +160,64 @@
       <div id="settings-container">
         <div class="container-blob"></div> 
         <ul id="settings-content">
-          <li>
-            <a id="change-language">
+          <li id="change-language">
+            <a>
               <img id="set-lang" src="src/img/icons/light/translate.svg" alt="Icon of the translate symbol">
               <p id="set-lang-text">Sprache ändern</p>
             </a>
           </li>
-          <li>
-            <a id="notification">
+          <li id="notification">
+            <a>
               <img id="set-note-on" src="src/img/icons/light/alert.svg" alt="Icon of a bell">
               <img id="set-note-urgent" src="src/img/icons/light/alert-urgent.svg" alt="Icon of a bell">
               <img id="set-note-off" src="src/img/icons/light/alert-off.svg" alt="Icon of a bell">
               <p id="set-note-text">Benachrichtungen: <span id="notification-text">Alle</i></p>
             </a>
           </li>
-          <li>
-            <a id="update">
+          <li id="update">
+            <a>
               <img id="set-up" src="src/img/icons/light/update.svg" alt="Icon of an round arrow">
               <p id="set-up-text">Nach Update suchen</p>
             </a>
           </li>
-          <li>
-            <a id="update-failed">
+          <li id="update-failed">
+            <a>
               <img id="set-up-failed" src="src/img/icons/light/update-fail.svg" alt="Icon of an round arrow">
               <p id="set-up-text-failed">Fehlgeschlagen</p>
             </a>
           </li>
-          <li>
-            <a id="download">
+          <li id="update-none">
+            <a>
+              <img id="set-up-none" src="src/img/icons/light/update.svg" alt="Icon of an round arrow">                      <!-- Replace with update icon + success icon-->
+              <p id="set-up-text-none">Neuste Version installiert</p>
+            </a>
+          </li>
+          <li id="download">
+            <a>
               <img id="set-dow" src="src/img/icons/light/download.svg" alt="Icon of the downlaod symbol">
               <p id="set-dow-text">Aktualisieren</p>
             </a>
           </li>
-          <li>
-            <a id="comment-settings">
+          <li id="download-failed">
+            <a>
+              <img id="set-dow-failed" src="src/img/icons/light/update-fail.svg" alt="Icon of an round arrow">                 <!-- Replace with download failed icon -->
+              <p id="set-dow-text-failed">Fehlgeschlagen</p>
+            </a>
+          </li>
+          <li id="comment-settings">
+            <a>
               <img id="set-comm" src="src/img/icons/light/comment-settings.svg" alt="Icon of the comment settings">
               <p id="set-comm-text">Kommentar-Einstellungen</p>
             </a>
           </li>
-          <li>
-            <a id="developer">
+          <li id="developer">
+            <a>
               <img id="set-dev" src="src/img/icons/light/code.svg" alt="Icon of the code symbol">
               <p id="set-dev-text">Entwickler-Optionen</p>
             </a>
           </li>
-          <li>
-            <a id="more-settings">
+          <li id="more-settings">
+            <a>
               <img class="moreIcon" src="src/img/icons/light/more.svg" alt="Icon of three dots">
               <p id="set-more-text">Mehr Einstellungen</p>
             </a>
