Updated settings download icon

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -90,7 +90,7 @@
           <a class="settings">
             <i class="line"></i>
             <img id="settingsIcon" src="src/img/icons/light/settings.svg" alt="Image of the settings icon">
-            <i id="updateInfo"></i>
+            <img id="settingsUpdateIcon" src="src/img/icons/light/settings-update.svg" alt="Image of the settings icon with a blue dot">
             <p class="navText">Einstellungen</p>
           </a>
         </footer>
