Updated download function

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -188,7 +188,7 @@
           </li>
           <li id="update-none">
             <a>
-              <img id="set-up-none" src="src/img/icons/light/update.svg" alt="Icon of an round arrow">                      <!-- Replace with update icon + success icon-->
+              <img id="set-up-none" src="src/img/icons/light/update-none.svg" alt="Icon of an round arrow">
               <p id="set-up-text-none">Neuste Version installiert</p>
             </a>
           </li>
@@ -200,7 +200,7 @@
           </li>
           <li id="download-failed">
             <a>
-              <img id="set-dow-failed" src="src/img/icons/light/update-fail.svg" alt="Icon of an round arrow">                 <!-- Replace with download failed icon -->
+              <img id="set-dow-failed" src="src/img/icons/light/download-fail.svg" alt="Icon of the downlaod symbol in an error state">
               <p id="set-dow-text-failed">Fehlgeschlagen</p>
             </a>
           </li>
