--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -11,13 +11,14 @@
     <link rel="stylesheet" href="src/stylesheet/lib/hint.min.css">
     <!-- JS -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+    <script src="header.js"></script>
     <script src="src/js/lib/jquery.min.js"></script>
     <script defer src="src/js/notification.js"></script>
     <script defer src="src/js/banner.js"></script>
     <script defer src="src/js/cursor.js"></script>
     <script defer src="src/js/theme.js"></script>
     <script defer src="src/js/nav.js"></script>
-    <script defer src="titleBar.js"></script>
+    <script defer src="ipc.js"></script>
     
     <script defer src="src/js/index.js"></script>
     <script>if (window.module) module = window.module;</script>
