Added profile quick selection

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -250,7 +250,16 @@
                     </span>
                   </h2>
                 </label>
+
                 <input type="text" title="" id="username-form" class="medium-form" placeholder="john_doe_on_instagram" maxlength="30" autocomplete="off" required>
+                <div id="profileDropdown">
+                  <button id="profileDropdownButton" onclick="profileDropdown()" type="button"><img src="src/img/icons/light/edit.svg" alt="Icon of an arrow facing downwards" id="profileDropdownImage"></button>
+                  <div id="profileDropdownContent">
+                    <a id="profile-1">Profile 1</a>
+                    <a id="profile-2">2</a>
+                    <a id="profile-3">3</a>
+                  </div>
+                </div>
 
               </div>
               <div id="password">
